tests/negative/test_fnc_redef_same_sig_cn.orb
fnc foo (x:i32) () {};
fnc foo (y:(i32 cn)) () {};

fnc main () () {};